src/libqxmlstream.bf

public struct QXmlStreamWriter
{
	[LinkName("QXmlStreamWriter_new")]
	public static extern void* QXmlStreamWriter_new();
	[LinkName("QXmlStreamWriter_new2")]
	public static extern void* QXmlStreamWriter_new2(QIODevice device);
	[LinkName("QXmlStreamWriter_SetDevice")]
	public static extern void QXmlStreamWriter_SetDevice(void* c_this, QIODevice device);
	[LinkName("QXmlStreamWriter_Device")]
	public static extern QIODevice QXmlStreamWriter_Device(void* c_this);
	[LinkName("QXmlStreamWriter_SetAutoFormatting")]
	public static extern void QXmlStreamWriter_SetAutoFormatting(void* c_this, bool autoFormatting);
	[LinkName("QXmlStreamWriter_AutoFormatting")]
	public static extern bool QXmlStreamWriter_AutoFormatting(void* c_this);
	[LinkName("QXmlStreamWriter_SetAutoFormattingIndent")]
	public static extern void QXmlStreamWriter_SetAutoFormattingIndent(void* c_this, int32 spacesOrTabs);
	[LinkName("QXmlStreamWriter_AutoFormattingIndent")]
	public static extern int32 QXmlStreamWriter_AutoFormattingIndent(void* c_this);
	[LinkName("QXmlStreamWriter_WriteAttribute")]
	public static extern void QXmlStreamWriter_WriteAttribute(void* c_this, char8[] qualifiedName, char8[] value);
	[LinkName("QXmlStreamWriter_WriteAttribute2")]
	public static extern void QXmlStreamWriter_WriteAttribute2(void* c_this, char8[] namespaceUri, char8[] name, char8[] value);
	[LinkName("QXmlStreamWriter_WriteAttributeWithAttribute")]
	public static extern void QXmlStreamWriter_WriteAttributeWithAttribute(void* c_this, QXmlStreamAttribute attribute);
	[LinkName("QXmlStreamWriter_WriteCDATA")]
	public static extern void QXmlStreamWriter_WriteCDATA(void* c_this, char8[] text);
	[LinkName("QXmlStreamWriter_WriteCharacters")]
	public static extern void QXmlStreamWriter_WriteCharacters(void* c_this, char8[] text);
	[LinkName("QXmlStreamWriter_WriteComment")]
	public static extern void QXmlStreamWriter_WriteComment(void* c_this, char8[] text);
	[LinkName("QXmlStreamWriter_WriteDTD")]
	public static extern void QXmlStreamWriter_WriteDTD(void* c_this, char8[] dtd);
	[LinkName("QXmlStreamWriter_WriteEmptyElement")]
	public static extern void QXmlStreamWriter_WriteEmptyElement(void* c_this, char8[] qualifiedName);
	[LinkName("QXmlStreamWriter_WriteEmptyElement2")]
	public static extern void QXmlStreamWriter_WriteEmptyElement2(void* c_this, char8[] namespaceUri, char8[] name);
	[LinkName("QXmlStreamWriter_WriteTextElement")]
	public static extern void QXmlStreamWriter_WriteTextElement(void* c_this, char8[] qualifiedName, char8[] text);
	[LinkName("QXmlStreamWriter_WriteTextElement2")]
	public static extern void QXmlStreamWriter_WriteTextElement2(void* c_this, char8[] namespaceUri, char8[] name, char8[] text);
	[LinkName("QXmlStreamWriter_WriteEndDocument")]
	public static extern void QXmlStreamWriter_WriteEndDocument(void* c_this);
	[LinkName("QXmlStreamWriter_WriteEndElement")]
	public static extern void QXmlStreamWriter_WriteEndElement(void* c_this);
	[LinkName("QXmlStreamWriter_WriteEntityReference")]
	public static extern void QXmlStreamWriter_WriteEntityReference(void* c_this, char8[] name);
	[LinkName("QXmlStreamWriter_WriteNamespace")]
	public static extern void QXmlStreamWriter_WriteNamespace(void* c_this, char8[] namespaceUri);
	[LinkName("QXmlStreamWriter_WriteDefaultNamespace")]
	public static extern void QXmlStreamWriter_WriteDefaultNamespace(void* c_this, char8[] namespaceUri);
	[LinkName("QXmlStreamWriter_WriteProcessingInstruction")]
	public static extern void QXmlStreamWriter_WriteProcessingInstruction(void* c_this, char8[] target);
	[LinkName("QXmlStreamWriter_WriteStartDocument")]
	public static extern void QXmlStreamWriter_WriteStartDocument(void* c_this);
	[LinkName("QXmlStreamWriter_WriteStartDocumentWithVersion")]
	public static extern void QXmlStreamWriter_WriteStartDocumentWithVersion(void* c_this, char8[] version);
	[LinkName("QXmlStreamWriter_WriteStartDocument2")]
	public static extern void QXmlStreamWriter_WriteStartDocument2(void* c_this, char8[] version, bool standalone);
	[LinkName("QXmlStreamWriter_WriteStartElement")]
	public static extern void QXmlStreamWriter_WriteStartElement(void* c_this, char8[] qualifiedName);
	[LinkName("QXmlStreamWriter_WriteStartElement2")]
	public static extern void QXmlStreamWriter_WriteStartElement2(void* c_this, char8[] namespaceUri, char8[] name);
	[LinkName("QXmlStreamWriter_WriteCurrentToken")]
	public static extern void QXmlStreamWriter_WriteCurrentToken(void* c_this, QXmlStreamReader reader);
	[LinkName("QXmlStreamWriter_HasError")]
	public static extern bool QXmlStreamWriter_HasError(void* c_this);
	[LinkName("QXmlStreamWriter_WriteNamespace2")]
	public static extern void QXmlStreamWriter_WriteNamespace2(void* c_this, char8[] namespaceUri, char8[] prefix);
	[LinkName("QXmlStreamWriter_WriteProcessingInstruction2")]
	public static extern void QXmlStreamWriter_WriteProcessingInstruction2(void* c_this, char8[] target, char8[] data);
}